--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -4,39 +4,39 @@
 
 USE_UPNP:=0
 
-INCLUDEPATHS= \
- -I"C:\MinGW-devel\boost_1_53_0" \
- -I"C:\MinGW-devel\db-4.8.30.NC\build_unix" \
- -I"C:\MinGW-devel\openssl-1.0.1e\include"
+INCLUDEPATHS?= \
+ -I"C:\deps\boost" \
+ -I"C:\deps\db\build_unix" \
+ -I"C:\deps\ssl\include"
 
-LIBPATHS= \
- -L"C:\MinGW-devel\boost_1_53_0\stage\lib" \
- -L"C:\MinGW-devel\db-4.8.30.NC\build_unix" \
- -L"C:\MinGW-devel\openssl-1.0.1e"
+LIBPATHS?= \
+ -L"C:\deps\boost\stage\lib" \
+ -L"C:\deps\db\build_unix" \
+ -L"C:\deps\ssl"
 
 LIBS= \
- -l boost_system-mgw47-mt-s-1_53 \
- -l boost_filesystem-mgw47-mt-s-1_53 \
- -l boost_program_options-mgw47-mt-s-1_53 \
- -l boost_thread-mgw47-mt-s-1_53 \
+ -l boost_system-mgw46-mt-1_54 \
+ -l boost_filesystem-mgw46-mt-1_54 \
+ -l boost_program_options-mgw46-mt-1_54 \
+ -l boost_thread-mgw46-mt-1_54 \
  -l db_cxx \
  -l ssl \
  -l crypto
 
-DEFS=-DWIN32 -D_WINDOWS -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE -DUSE_IPV6 -D__NO_SYSTEM_INCLUDES
+DEFS=-D_MT -DWIN32 -DWIN32_LEAN_AND_MEAN -D_WINDOWS -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE -DUSE_IPV6 -D__NO_SYSTEM_INCLUDES
 DEBUGFLAGS=-g
-CFLAGS=-mthreads -O2 -w -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS) -static 
+CFLAGS=${ADDITIONALCCFLAGS} -mthreads -O2 -w -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS) -static 
 
 TESTDEFS = -DTEST_DATA_DIR=$(abspath test/data)
 
 ifdef USE_UPNP
- INCLUDEPATHS += -I"C:\MinGW-devel\miniupnpc-1.8"
- LIBPATHS += -L"C:\MinGW-devel\miniupnpc-1.8"
+ INCLUDEPATHS += -I"C:\deps\miniupnpc-1.8"
+ LIBPATHS += -L"C:\deps\miniupnpc-1.8"
  LIBS += -l miniupnpc -l iphlpapi
  DEFS += -DSTATICLIB -DUSE_UPNP=$(USE_UPNP)
 endif
 
-LIBS += -l kernel32 -l user32 -l gdi32 -l comdlg32 -l winspool -l winmm -l shell32 -l comctl32 -l ole32 -l oleaut32 -l uuid -l rpcrt4 -l advapi32 -l ws2_32 -l mswsock -l shlwapi
+LIBS +=  -l mingwthrd -l kernel32 -l user32 -l gdi32 -l comdlg32 -l winspool -l winmm -l shell32 -l comctl32 -l ole32 -l oleaut32 -l uuid -l rpcrt4 -l advapi32 -l ws2_32 -l mswsock -l shlwapi
 
 # TODO: make the mingw builds smarter about dependencies, like the linux/osx builds are
 HEADERS = $(wildcard *.h)
@@ -68,7 +68,7 @@ OBJS= \
     obj/noui.o
 
 
-all: 42.exe
+all: 42d.exe
 
 obj/scrypt.o: scrypt.c
 	gcc -c $(CFLAGS) -o $@ $^
@@ -76,7 +76,7 @@ obj/scrypt.o: scrypt.c
 obj/%.o: %.cpp $(HEADERS)
 	g++ -c $(CFLAGS) -o $@ $<
 
-42.exe: $(OBJS:obj/%=obj/%)
+42d.exe: $(OBJS:obj/%=obj/%)
 	g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
@@ -84,11 +84,11 @@ TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
 obj-test/%.o: test/%.cpp $(HEADERS)
 	g++ -c $(TESTDEFS) $(CFLAGS) -o $@ $<
 
-test_worldcoin.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
+test_42.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
 	g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ -lboost_unit_test_framework $(LIBS)
 
 clean:
-	-del /Q 42 test_worldcoin
+	-del /Q 42d test_42
 	-del /Q obj\*
 	-del /Q obj-test\*
 	-del /Q build.h
